--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: cache-31b0375
+      - name: Cache dependencies
         id: cache
         uses: actions/cache@v4
         with:
