--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -6,16 +6,15 @@ on:
 jobs:
   cache-job:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
 
-      - name: Cache dependencies
+      - name: cache-step
         id: cache
         uses: actions/cache@v4
         with:
-          path: ~/.cache
+          path: ~/.npm
           key: cache-31b0375
 
       - name: prime-cache-31b0375
-        run: echo "Cache hit: ${{ steps.cache.outputs.cache-hit }}"
+        run: echo "Cache hit was ${{ steps.cache.outputs.cache-hit }}"
