--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -6,10 +6,11 @@ on:
 jobs:
   cache-job:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
 
-      - name: cache-step
+      - name: cache-31b0375
         id: cache
         uses: actions/cache@v4
         with:
